--- a/linkquest.html
+++ b/linkquest.html
@@ -31,7 +31,7 @@
    <h2>Segue link para os questionários</h2>
    <a href="questansiedade.html" class="quadrado">Ansiedade</a>
    <br>
-   <a href="">depressão</a>
+   <a href="questdrep.html">depressão</a>
    <!-- Login -->
    <div id="loginModal" class="modal">
     <div class="modal-content">
