--- a/questdrep.html
+++ b/questdrep.html
@@ -18,7 +18,7 @@
             </ul>
         </nav>
     </header>
-    <h1>Teste de ansiedade</h1>
+    <h1>Teste de depressão</h1>
     <br>
     <div class="container">
         <div id="progress-bar"></div>
