--- a/docsdepre.html
+++ b/docsdepre.html
@@ -7,7 +7,7 @@
     </head>
     <body>
       <header>
-        <div id="logo"><img src="logo" width="50"></div>
+        <div id="logo"><img src="logomental.jpg" width="50"></div>
         <nav id="menu">
             <ul>
                 <li> <a href="mymental">Inicio</a></li>
