--- a/docsansi.html
+++ b/docsansi.html
@@ -7,13 +7,12 @@
     </head>
     <body>
       <header>
-        <div id="logo"><img src="logo" width="50"></div>
+        <div id="logo"><img src="logomental.jpg" width="50"></div>
         <nav id="menu">
             <ul>
                 <li> <a href="mymental">Inicio</a></li>
                 <li> <a href="Saudemental.html">Saude Mental</a></li>
                 <li> <a href="linkquest">Questionarios</a></li>
-                <li> <a href="sobre nos.html">Sobre nos</a></li>
                 <li> <a href="#" onclick="openModal()">Login</a></li>
             </ul>
     </header>
