--- a/questansiedade.html
+++ b/questansiedade.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <div id="logo"><img src="logo.png" width="50" alt="Logo"></div>
+        <div id="logo"><img src="logomental.jpg" width="50" alt="Logo"></div>
         <nav id="menu">
             <ul>
                 <li> <a href="mymental.html">Início</a></li>
