--- a/sobre nos.html
+++ b/sobre nos.html
@@ -9,13 +9,12 @@
 
 
 <header>
-    <div id="logo"><img src="logo.png" alt="Logo" width="50"></div>
+    <div id="logo"><img src="logomental.jpg" alt="Logo" width="50"></div>
     <nav id="menu">
         <ul>
             <li><a href="mymental.html">Início</a></li>
             <li><a href="Saudemental.html">Saúde Mental</a></li>
             <li><a href="linkquest.html">Questionários</a></li>
-            <li><a href="sobre nos.html">Sobre nós</a></li>
             <li><a href="#" onclick="openModal()">Login</a></li>
         </ul>
     </nav>
