--- a/docsansi.html
+++ b/docsansi.html
@@ -13,6 +13,7 @@
                 <li> <a href="mymental">Inicio</a></li>
                 <li> <a href="Saudemental.html">Saude Mental</a></li>
                 <li> <a href="linkquest">Questionarios</a></li>
+                <li> <a href="sobre nos.html">Sobre nós</a></li>
                 <li> <a href="#" onclick="openModal()">Login</a></li>
             </ul>
     </header>
