--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <li><a href="index.html">Início</a></li>
                 <li><a href="saudemental.html">Saúde Mental</a></li>
                 <li><a href="linkquest.html">Questionários</a></li>
+                <li> <a href="sobre nos.html">Sobre nós</a></li>
                 <li><a href="#" onclick="openModal()">Login</a></li>
             </ul>
         </nav>
